Working on restaurant

--- a/public/index.html
+++ b/public/index.html
@@ -31,9 +31,9 @@
 
   <body>
     <my-app>
-      <div id="intro">
-        <span></span>
-        <img src="app/Images/Interface/0_intro_logo.png">
+      <div id="intro" class="_pos_rel">
+        <img src="app/Images/Interface/0_intro_logo.png"><br>
+        <i class="fa fa-circle-o-notch fa-spin fa-2x fa-fw"></i>
       </div>
     </my-app>
   </body>
