--- a/public/index.html
+++ b/public/index.html
@@ -27,6 +27,10 @@
     <script language="javascript" src="jquery-3.1.1.min.js"></script>
     <script language="javascript" src="app/Scripts/0_intro.js"></script>
 
+    <link href="/app/Images/Interface/icon_square.png" rel="apple-touch-icon" />
+    <link href="/app/Images/Interface/icon_192.png" rel="icon" sizes="192x192" />
+    <link href="/app/Images/Interface/icon_128.png" rel="icon" sizes="128x128" />
+
   </head>
 
   <body>
