--- a/public/index.html
+++ b/public/index.html
@@ -1,6 +1,12 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <meta name="og:title" content="시키자.com" />
+    <meta name="og:description" content="포항의 허기진 청춘들에게 바칩니다 - 한글주소 시키자.com" />
+    <meta name="og:image" content="http://xn--vv4b29fgtj.com/app/Images/Interface/link_thumbnail.png" />
+    <meta property="og:image:width" content="1200" />
+    <meta property="og:image:height" content="630" />
+    <meta property="og:url" content="http://시키자.com" />
 
     <!--처음에 어디로 라우팅될지를 지정한다-->
     <script>document.write('<base href="' + document.location + '" />');</script>
