Working On Facebook Login

--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,8 @@
     <meta property="og:image:height" content="630" />
     <meta property="og:url" content="http://시키자.com" />
 
-    <script src="app/Scripts/_facebook_login.js"></script>
+    <!--<script src="app/Scripts/_facebook_login.js"></script>-->
+    <!--<script src="//connect.facebook.net/en_US/sdk.js"></script>-->
 
     <!--처음에 어디로 라우팅될지를 지정한다-->
     <script>document.write('<base href="' + document.location + '" />');</script>
