--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,8 @@
     <meta property="og:image:height" content="630" />
     <meta property="og:url" content="http://시키자.com" />
 
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+
     <script src="//connect.facebook.net/en_US/sdk.js"></script>
 
     <!--처음에 어디로 라우팅될지를 지정한다-->
